Patch/1.4 add compound reference, update html template, fix event table missing coloring on dark mode,

--- a/src/static/css-files/table.css
+++ b/src/static/css-files/table.css
@@ -7,7 +7,7 @@
     margin-right: 1rem;
 }
 
-.ui-paginator {
+.ui-paginator, .p-datatable .p-datatable-tbody > tr {
     background-color: var(--bkg);
     color: var(--text);
 }
